<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:backgroundTint="@color/card_blue_bg"
    android:backgroundTintMode="multiply"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imWeatherDayHour"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_weather_image"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/tvConditionItem"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/aubrey"
            android:lineSpacingMultiplier="0.7"
            android:text="@string/condition_item_text"
            android:textColor="@color/card_text_white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvDataItem"
            app:layout_constraintTop_toBottomOf="@+id/tvDataItem"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvDataItem"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/aubrey"
            android:text="@string/date_item_text"
            android:textColor="@color/card_text_blue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvTempItem"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/aubrey"
            android:gravity="center"
            android:lines="1"
            android:text="@string/min_max_item_text"
            android:textColor="@color/card_text_white"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imWeatherDayHour"
            app:layout_constraintStart_toEndOf="@+id/tvConditionItem"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>